# flask-api

./: .dockerignore  .env_example  .flake8  Dockerfile  README.md  create_migration_file.py  docker-compose.yml  init_docker.sh  mugrations.py  mugrations_config.json  pyproject.toml  scripts.py
.github/workflows/: ci.yml
flask-api/: app.py  muGrations.py  mugrations.py  routes.py  server.py
flask-api/src/controllers/: AuthController.py  AuthController_test.py  UserController.py  UserController_test.py
flask-api/src/database/: connection.py  run_migrations.py
flask-api/src/database/migrations/: 1594348432_0447772_create_user_table.py
flask-api/src/database/mugrations/: mugration_1594348432_0447772_create_user_table.py  mugration_1594424047_0580876_first_mugration.py
flask-api/src/middlewares/: ValidateToken.py
flask-api/src/models/: UserModel.py
src/: app.py  routes.py  server.py
src/controllers/: UserController.py  UserController_test.py
src/models/: UserModel.py
